jenkins/del_po.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubernetes.io/psp: eks.privileged
  labels:
    jenkins: py_slave
    jenkins/jenkins-slave: "true"
  name: maven-slave-knq2l
  namespace: default
spec:
  containers:
  - args:
    - 7f91a3be63a077c5f2c44538d9e996c3fdd0556a2d8f307c7c8e239c5a7101d6
    - maven-slave-knq2l
    image: jenkins/jnlp-slave:3.35-5-alpine
    imagePullPolicy: IfNotPresent
    name: jnlp
    securityContext:
      privileged: false
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    tty: true
    volumeMounts:
    - mountPath: /home/jenkins/agent
      name: workspace-volume
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-zb7w8
      readOnly: true
    workingDir: /home/jenkins/agent
