jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   -  http:
        paths:
         - path: /jenkins
           backend:
             serviceName: jenkins
             servicePort: 8080
